--- a/ChinesePoker.Core/packages.config
+++ b/ChinesePoker.Core/packages.config
@@ -1,4 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Combinatorics" version="1.0.3.2" targetFramework="net452" />
+  <package id="Microsoft.ML" version="0.8.0" targetFramework="net471" />
+  <package id="Microsoft.ML.CpuMath" version="0.8.0" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
+  <package id="System.CodeDom" version="4.4.0" targetFramework="net471" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net471" />
+  <package id="System.ComponentModel.Composition" version="4.5.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net471" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.8.0" targetFramework="net471" />
 </packages>
