--- a/ChinesePoker.Core/packages.config
+++ b/ChinesePoker.Core/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Combinatorics" version="1.0.3.2" targetFramework="net452" />
-  <package id="Microsoft.ML" version="0.8.0" targetFramework="net471" />
-  <package id="Microsoft.ML.CpuMath" version="0.8.0" targetFramework="net471" />
+  <package id="Microsoft.ML" version="1.4.0" targetFramework="net462" />
+  <package id="Microsoft.ML.CpuMath" version="1.4.0" targetFramework="net462" />
+  <package id="Microsoft.ML.DataView" version="1.4.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
   <package id="System.CodeDom" version="4.4.0" targetFramework="net471" />
