--- a/ChinesePoker.ML/ChinesePoker.ML.csproj
+++ b/ChinesePoker.ML/ChinesePoker.ML.csproj
@@ -66,7 +66,13 @@
       <Version>1.0.3.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.ML">
-      <Version>0.8.0</Version>
+      <Version>1.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.ML.FastTree">
+      <Version>1.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.ML.LightGBM">
+      <Version>1.4.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
