--- a/ChinesePoker.Console/ChinesePoker.Console.csproj
+++ b/ChinesePoker.Console/ChinesePoker.Console.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A49CD57D-A79F-4B9F-B6F8-B930677BBAF0}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <RootNamespace>ChinesePoker.ML</RootNamespace>
-    <AssemblyName>ChinesePoker.ML</AssemblyName>
+    <ProjectGuid>{36CE4B7A-BEB0-4801-BAAD-0E96D6E9246F}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>ChinesePoker.Console</RootNamespace>
+    <AssemblyName>ChinesePoker.Console</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x64</PlatformTarget>
@@ -33,9 +32,6 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -48,15 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Component\CategorizationMlStrategy.cs" />
-    <Compile Include="Component\MlStrategyBase.cs" />
-    <Compile Include="Component\PlayRecordGenerator.cs" />
-    <Compile Include="Component\RegressionMlStrategy.cs" />
-    <Compile Include="ConsoleHelper.cs" />
-    <Compile Include="MachineLearner\CategorizationLearner.cs" />
-    <Compile Include="MachineLearner\IMachineLearner.cs" />
-    <Compile Include="MachineLearner\RegressionLearner.cs" />
-    <Compile Include="Model\RoundData.cs" />
+    <Compile Include="Predictor.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -67,24 +56,15 @@
       <Project>{700e80ad-db69-4992-8355-64222aa93566}</Project>
       <Name>ChinesePoker.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ChinesePoker.ML\ChinesePoker.ML.csproj">
+      <Project>{a49cd57d-a79f-4b9f-b6f8-b930677bbaf0}</Project>
+      <Name>ChinesePoker.ML</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Combinatorics">
       <Version>1.0.3.2</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.ML">
-      <Version>1.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.ML.AutoML">
-      <Version>0.16.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.ML.FastTree">
-      <Version>1.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.ML.LightGBM">
-      <Version>1.4.0</Version>
-    </PackageReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
